--- a/index.html
+++ b/index.html
@@ -1,76 +1,11 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>JET Wrestling — Summer Camp</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container">
-    <header class="site-header">
-      <div class="brand">
-        <img src="images/logo.svg" alt="JET Wrestling logo">
-        <div>
-          <h1 class="site-title">JET Wrestling — Summer Camp</h1>
-          <div class="tag">West‑Oak High School • Westminster, SC</div>
-        </div>
-      </div>
-      
-<nav class="nav" role="navigation" aria-label="Main Navigation">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="schedule.html">Schedule</a>
-  <a href="register.html">Register</a>
-  <a href="gallery.html">Gallery</a>
-  <a href="contact.html">Contact</a>
-  <a href="sources.html">Sources</a>
-</nav>
 
-    </header>
-
-    <section class="hero">
-      <div class="inner">
-        <div class="col">
-          <h2>Train. Compete. Grow.</h2>
-          <p class="muted">A multi-day wrestling camp focused on fundamentals, live drilling, conditioning, and character development. Open to wrestlers of all levels — beginners to advanced.</p>
-          <div class="cta">
-            <a class="btn" href="register.html">Register Now</a>
-            <a class="btn alt" href="schedule.html">Camp Schedule & Pricing</a>
-          </div>
-        </div>
-        <div class="col">
-          <img src="images/hero.svg" alt="Jet Wrestling Camp hero">
-        </div>
-      </div>
-    </section>
-
-    <div class="grid">
-      <div class="card">
-        <h2>Why JET Camp?</h2>
-        <p class="muted">JET Wrestling Club is a community-focused wrestling organization based in Seneca and Oconee County, SC. Coaches emphasize technique, safety, and competitive preparedness.</p>
-        <ul>
-          <li>Technique stations and live wrestling</li>
-          <li>Strength & conditioning tailored for wrestlers</li>
-          <li>Small group instruction and situational drilling</li>
-          <li>Sportsmanship, discipline, and leadership</li>
-        </ul>
-        <p class="muted">Many of JET's events — including the JET Open and seasonal Boot Camps — are hosted at West‑Oak High School's wrestling facilities.</p>
-      </div>
-
-      <aside class="card">
-        <h3>Quick Info</h3>
-        <p class="muted"><strong>Location:</strong> West‑Oak High School, 130 Warrior Lane, Westminster, SC</p>
-        <p class="muted"><strong>Typical Ages:</strong> 6–18 (beginner through high school)</p>
-        <p class="muted"><strong>Contact:</strong> See contact page for club & venue details.</p>
-      </aside>
-    </div>
-
-    <footer class="footer">
-      <div>Questions? Visit the <a href="contact.html">contact page</a> or view <a href="sources.html">sources</a> for official listings and event pages.</div>
-    </footer>
-  </div>
-
-  <script src="scripts.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head>
+<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>JET Wrestling Summer Camp</title>
+<link rel="stylesheet" href="styles.css">
+<script defer src="scripts.js"></script>
+</head><body>
+<header><h1>JET Wrestling Summer Camp</h1><nav><a href="index.html">Home</a><a href="about.html">About</a><a href="schedule.html">Schedule</a><a href="register.html">Register</a><a href="gallery.html">Gallery</a><a href="contact.html">Contact</a></nav></header>
+<section class="hero"><h2>Train • Develop • Compete</h2></section>
+<footer>© 2025 JET Wrestling Club</footer>
+</body></html>
