--- a/schedule.html
+++ b/schedule.html
@@ -1,58 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Schedule & Pricing — JET Camp</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container">
-    <header class="site-header">
-      <div class="brand">
-        <img src="images/logo.svg" alt="JET Wrestling logo">
-        <div>
-          <h1 class="site-title">Camp Schedule & Pricing</h1>
-          <div class="tag">Plan your training — dates & times</div>
-        </div>
-      </div>
-      
-<nav class="nav" role="navigation" aria-label="Main Navigation">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="schedule.html">Schedule</a>
-  <a href="register.html">Register</a>
-  <a href="gallery.html">Gallery</a>
-  <a href="contact.html">Contact</a>
-  <a href="sources.html">Sources</a>
-</nav>
 
-    </header>
-
-    <section class="card" style="margin-top:18px">
-      <h2>Typical Camp Format</h2>
-      <p class="muted">Camps run as day camps over multiple consecutive days. A typical day includes warm-up & agility, skill stations, live wrestling, and conditioning.</p>
-
-      <h3>Example Daily Schedule</h3>
-      <ul>
-        <li><strong>8:30 – 9:00</strong> – Check-in & dynamic warm-up</li>
-        <li><strong>9:00 – 10:30</strong> – Skill stations (takedowns, defense, mat technique)</li>
-        <li><strong>10:30 – 11:00</strong> – Break / hydration</li>
-        <li><strong>11:00 – 12:30</strong> – Live wrestling & situational drilling</li>
-        <li><strong>12:30 – 1:30</strong> – Lunch (participants bring packed lunch)</li>
-        <li><strong>1:30 – 3:00</strong> – Strength & conditioning / team games</li>
-      </ul>
-
-      <h3>Pricing (example)</h3>
-      <p class="muted">Standard registration: $120 per session. Early bird and sibling discounts often available. Tournament coaching and private lessons priced separately.</p>
-      <p class="muted">Exact dates, session lengths, and pricing are announced on JET's official pages and event listings.</p>
-      <div class="cta"><a class="btn" href="register.html">Register</a></div>
-    </section>
-
-    <footer class="footer">
-      <div>Questions? See <a href="contact.html">Contact</a>.</div>
-    </footer>
-  </div>
-  <script src="scripts.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8">
+<title>Schedule</title><link rel="stylesheet" href="styles.css"></head>
+<body><header><h1>Camp Schedule</h1><nav><a href="index.html">Home</a></nav></header>
+<ul><li>Day 1 — Fundamentals</li><li>Day 2 — Technique</li><li>Day 3 — Live matches</li></ul>
+</body></html>
