--- a/contact.html
+++ b/contact.html
@@ -1,63 +1,7 @@
-<!doctype html>
-<html lang="en"><head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact — JET Wrestling Camp</title>
-  <link rel="stylesheet" href="styles.css">
-</head><body>
-  <div class="container">
-    <header class="site-header">
-      <div class="brand">
-        <img src="images/logo.svg" alt="JET Wrestling logo">
-        <div>
-          <h1 class="site-title">Contact</h1>
-          <div class="tag">Get in touch with organizers and the venue</div>
-        </div>
-      </div>
-      
-<nav class="nav" role="navigation" aria-label="Main Navigation">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="schedule.html">Schedule</a>
-  <a href="register.html">Register</a>
-  <a href="gallery.html">Gallery</a>
-  <a href="contact.html">Contact</a>
-  <a href="sources.html">Sources</a>
-</nav>
 
-    </header>
-
-    <section style="margin-top:18px">
-      <div class="grid">
-        <div class="card">
-          <h2>Contact the Club</h2>
-          <p class="muted">JET Wrestling Club (club pages & social):</p>
-          <ul class="muted">
-            <li>Facebook: https://www.facebook.com/JETWrestlingClub/</li>
-            <li>Instagram: https://www.instagram.com/jetwrestlingsc/</li>
-            <li>Club directory listing: https://www.trackwrestling.com/</li>
-          </ul>
-          <h3>Event Director (example)</h3>
-          <p class="muted">Philip Price — event director for local JET Open events (listed on event pages).</p>
-        </div>
-
-        <aside class="card">
-          <h3>Venue</h3>
-          <p class="muted"><strong>West‑Oak High School</strong><br>130 Warrior Lane, Westminster, SC 29693<br>Phone: (864) 886-4530</p>
-          <div style="margin-top:12px">
-            <h4>Send a message</h4>
-            <form id="contact-form">
-              <label>Name<input type="text" name="name" required></label>
-              <label>Email<input type="email" name="email" required></label>
-              <label>Message<textarea name="message" rows="3" required></textarea></label>
-              <div class="cta"><button class="btn" type="submit">Send Message</button></div>
-            </form>
-          </div>
-        </aside>
-      </div>
-    </section>
-
-    <footer class="footer">Return to <a href="index.html">Home</a></footer>
-  </div>
-  <script src="scripts.js"></script>
+<!DOCTYPE html><html><head><meta charset="UTF-8">
+<title>Contact</title><link rel="stylesheet" href="styles.css"></head>
+<body><header><h1>Contact</h1><nav><a href="index.html">Home</a></nav></header>
+<p>Email: info@jetwrestling.com</p>
+<p>Location: West-Oak High School, Westminster SC</p>
 </body></html>
