--- a/gallery.html
+++ b/gallery.html
@@ -1,49 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Gallery — JET Camp</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container">
-    <header class="site-header">
-      <div class="brand">
-        <img src="images/logo.svg" alt="JET Wrestling logo">
-        <div>
-          <h1 class="site-title">Gallery</h1>
-          <div class="tag">Moments from past camps & tournaments</div>
-        </div>
-      </div>
-      
-<nav class="nav" role="navigation" aria-label="Main Navigation">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="schedule.html">Schedule</a>
-  <a href="register.html">Register</a>
-  <a href="gallery.html">Gallery</a>
-  <a href="contact.html">Contact</a>
-  <a href="sources.html">Sources</a>
-</nav>
 
-    </header>
-
-    <section style="margin-top:18px">
-      <div class="card">
-        <h2>Camp Photos</h2>
-        <div class="gallery">
-          <img src="images/hero.svg" alt="Camp photo 1">
-          <img src="images/logo.svg" alt="Camp logo">
-          <img src="images/hero.svg" alt="Camp photo 3">
-          <img src="images/logo.svg" alt="Camp logo 2">
-        </div>
-        <p class="muted">For high-resolution photos and videos, follow JET's official social pages and event listings (see Sources).</p>
-      </div>
-    </section>
-
-    <footer class="footer"><a href="index.html">Home</a></footer>
-  </div>
-  <script src="scripts.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8">
+<title>Gallery</title><link rel="stylesheet" href="styles.css"></head>
+<body><header><h1>Gallery</h1><nav><a href="index.html">Home</a></nav></header>
+<img src="images/hero.svg" width="400">
+</body></html>
